package com.bloomtech.library.models.checkableTypes;

public enum MediaType {
    BOOK,
    MUSIC,
    VIDEO
}
