package com.bloomtech.library.models.checkableTypes;

public class ScienceKit extends Checkable {
    public ScienceKit() {
    }

    public ScienceKit(String isbn, String title) {
        super(isbn, title);
    }
}
